--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,1 +1,15 @@
-<p>users works!</p>
+<div fxLayout="row wrap" fxLayout.sm="column">
+  <div
+    *ngFor="let user of users"
+    fxFlex.gt-md="25%"
+    fxFlex.md="33.3%"
+    fxFlex.lt-md="100%"
+    class="user-card-div"
+  >
+    <mat-card fxLayoutAlign="center center" fxLayout="column" class="user-card">
+      <img [src]="user.avatar" alt="avatar" />
+      <h3 class="username">{{ user.first_name }} {{ user.last_name }}</h3>
+      <p>{{ user.email }}</p>
+    </mat-card>
+  </div>
+</div>
