--- a/src/app/remove-user/remove-user.component.html
+++ b/src/app/remove-user/remove-user.component.html
@@ -1,1 +1,3 @@
-<p>remove-user works!</p>
+<button mat-raised-button color="warn" class="btn" (click)="openWantToRemoveDialog()">
+  Delete
+</button>
