--- a/src/app/update-user/update-user.component.html
+++ b/src/app/update-user/update-user.component.html
@@ -1,1 +1,26 @@
-<p>update-user works!</p>
+<form
+  fxLayout="column"
+  fxLayoutAlign="center center"
+  [formGroup]="updateForm"
+  (ngSubmit)="getUpdateInfo(updateForm)"
+  class="form"
+>
+  <mat-form-field appearance="fill">
+    <mat-label>Name</mat-label>
+    <input matInput formControlName="name" />
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Job</mat-label>
+    <input matInput formControlName="job" />
+  </mat-form-field>
+
+  <button
+    mat-raised-button
+    color="primary"
+    type="submit"
+    [disabled]="updateForm.invalid"
+  >
+    Update
+  </button>
+</form>
