--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,27 @@
-<p>register works!</p>
+<form
+  fxLayout="column"
+  fxLayoutAlign="center center"
+  [formGroup]="createForm"
+  (ngSubmit)="getRegisterInfo(createForm)"
+  class="form"
+>
+  <h2>Register</h2>
+  <mat-form-field appearance="fill">
+    <mat-label>Email</mat-label>
+    <input type="email" matInput formControlName="email" />
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Password</mat-label>
+    <input type="password" matInput formControlName="password" />
+  </mat-form-field>
+
+  <button
+    mat-raised-button
+    color="primary"
+    type="submit"
+    [disabled]="createForm.invalid"
+  >
+    Register
+  </button>
+</form>
