--- a/src/app/update-user/update-user.component.html
+++ b/src/app/update-user/update-user.component.html
@@ -5,6 +5,7 @@
   (ngSubmit)="getUpdateInfo(updateForm)"
   class="form"
 >
+  <h2>Update</h2>
   <mat-form-field appearance="fill">
     <mat-label>Name</mat-label>
     <input matInput formControlName="name" />
