--- a/src/app/register/user-created-dialoge.html
+++ b/src/app/register/user-created-dialoge.html
@@ -1,6 +1,6 @@
-<h2 mat-dialog-title>User Deleted</h2>
+<h2 mat-dialog-title>Registration</h2>
 <mat-dialog-content class="mat-typography">
-  <p>User removed successfully</p>
+  <p>Registered successfully</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close cdkFocusInitial>OK</button>
