--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,28 @@
-<p>login works!</p>
+<form
+  fxLayout="column"
+  fxLayoutAlign="center center"
+  [formGroup]="loginForm"
+  (ngSubmit)="getLoginInfo(loginForm)"
+  class="form"
+>
+  <h2>Login</h2>
+  <p class="err-msg">{{ errMessage }}</p>
+  <mat-form-field appearance="fill">
+    <mat-label>Email</mat-label>
+    <input type="email" matInput formControlName="email" />
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Password</mat-label>
+    <input type="password" matInput formControlName="password" />
+  </mat-form-field>
+
+  <button
+    mat-raised-button
+    color="primary"
+    type="submit"
+    [disabled]="loginForm.invalid"
+  >
+    Login
+  </button>
+</form>
