--- a/src/app/single-user/single-user.component.html
+++ b/src/app/single-user/single-user.component.html
@@ -1,4 +1,4 @@
-<mat-card fxLayoutAlign="center center" fxLayout="column" class="user-div">
+<mat-card *ngIf="user" fxLayoutAlign="center center" fxLayout="column" class="user-div">
   <img [src]="user?.avatar" alt="avatar" class="user-img" />
   <h2 class="username">{{ user?.first_name }} {{ user?.last_name }}</h2>
   <p>{{ user?.email }}</p>
